# MultiAgentStudio

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  README_SIMPLE.md  config.yaml.example  openclaw_studio.py  pyproject.toml  requirements.txt  run.sh  start-backend.sh  start-frontend.sh  start.sh  stop-backend.sh  stop.sh
backend/: pyproject.toml
backend/src/openclaw_backend/: __init__.py  employee_model.py  models.py  openclaw_client.py  openclaw_service.py  server.py
data/: employees.json  messages_emp-remotion-dev.jsonl  messages_emp-script-writer.jsonl  messages_emp-video-director.jsonl  messages_emp-video-editor.jsonl  messages_emp-visual-designer.jsonl  messages_remotion-dev.jsonl  messages_script-writer.jsonl  messages_video-director.jsonl  messages_video-editor.jsonl  messages_visual-designer.jsonl  multi_agent_config.json  studio_config.json
data/agents-docs/remotion_video/remotion-core-dev/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/remotion_video/remotion-media-dev/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/remotion_video/video-director/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/remotion_video/video-quality-analyst/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/remotion_video/video-script-writer/: AGENTS.md  IDENTITY.md  SOUL.md  USER.md
data/agents-docs/slidev_ppt/ppt-code-specialist/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/slidev_ppt/ppt-content-architect/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/slidev_ppt/ppt-director/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/slidev_ppt/ppt-image-artist/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/slidev_ppt/ppt-integrator/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/slidev_ppt/ppt-visual-designer/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/software_engineering/observer/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/software_engineering/project-manager/: AGENTS.md  IDENTITY.md  SOUL.md
data/agents-docs/software_engineering/software-developer/: AGENTS.md  IDENTITY.md  SOUL.md
docs/: api.md  architecture.md
frontend/: pyproject.toml
frontend/src/openclaw_frontend/: __init__.py  __main__.py  api_client.py  app.py
frontend/src/openclaw_frontend/screens/: __init__.py  add_employee.py  chat.py  dashboard.py  employee_property.py
mushtech_studio/: __init__.py  __main__.py  add_employee_screen.py  agent_initializer.py  agent_management_screen.py  app.py  chat_screen.py  cli.py  client.py  cmd_executor.py  config_manager.py  config_screen.py  logger.py  message_manager.py  models.py  reset_manager.py  utils.py
mushtech_studio/templates/: __init__.py  base.py  remotion_video.py  slidev_ppt.py  software_engineering.py  stock_analysis.py
mushtech_studio/templates/prompts/: remotion_video.json  remotion_video_docs.json  shared_user.json  slidev_ppt.json  software_engineering.json  software_engineering_docs.json  stock_analysis.json  stock_analysis_docs.json
scripts/: setup_mushtech_team.py
src/openclaw_tui/: __init__.py  __main__.py  app.py
src/openclaw_tui/core/: __init__.py  employee_manager.py  state_manager.py
src/openclaw_tui/openclaw/: __init__.py  client.py  models.py
src/openclaw_tui/ui/: __init__.py
(+34 files in other folders)
