[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-backend"
version = "0.1.0"
description = "OpenClaw TUI Studio - 后端服务"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "cryptography>=41.0.0",
]

[project.scripts]
openclaw-backend = "openclaw_backend.server:main"

[tool.setuptools.packages.find]
where = ["src"]
