[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-frontend"
version = "0.1.0"
description = "OpenClaw TUI Studio - TUI 前端"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.45.0",
    "httpx>=0.25.0",
    "websockets>=12.0",
    "rich>=13.7.0",
]

[project.scripts]
openclaw-frontend = "openclaw_frontend.app:main"

[tool.setuptools.packages.find]
where = ["src"]
